@@ -12,10 +12,12 @@
 - Simplify repositories UI
 ** Bugfix
 - [core] Sync fetch no data. [[https://github.com/jiacai2050/oh-my-github/commit/92cf16ea248d20d07c544e190760182d171f753c][92cf16e]]
-- [emacs] pass wrong pipe =fd= to background thread. [[https://github.com/jiacai2050/oh-my-github/commit/92cf16ea248d20d07c544e190760182d171f753c][92cf16e]]
 - [core] fix =Source and destination overlap in mempcpy= when concat SQL in query repos. [[https://github.com/jiacai2050/oh-my-github/pull/7][#7]]
+- [emacs] pass wrong pipe =fd= to background thread. [[https://github.com/jiacai2050/oh-my-github/commit/92cf16ea248d20d07c544e190760182d171f753c][92cf16e]]
+- [emacs] fix trending repo get full_name issue
 ** Internal Improvements
 - Add unittest, based on Zig
+- Enable =-Wall -Wextra -Werror -Wno-unused-parameter -Wpedantic -Wno-gnu= flags
 * v0.6.0 (2022-06-25)
 ** New Features
 - Query trending support spoken languages filter
